Lanai: DrawImage/IncorrectAlphaConversionBicubic.java failure

XMLWordPrintable

    • 2d
    • x86_64
    • os_x

      java/awt/image/DrawImage/IncorrectAlphaConversionBicubic.java fails with the following output:

      metalEnabled=1
      Metal support is present
      Actual: 7b5f7a02
      Expected: 7bc7ff06
      java.lang.RuntimeException: Test failed
      at IncorrectAlphaConversionBicubic.main(IncorrectAlphaConversionBicubic.java:88)
      at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
      at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:64)
      at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
      at java.base/java.lang.reflect.Method.invoke(Method.java:564)
      at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:127)
      at java.base/java.lang.Thread.run(Thread.java:832)

            Assignee:
            Alexey Ushakov
            Reporter:
            Alexey Ushakov
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: