8255149: Lanai: DrawImage/IncorrectAlphaConversionBicubic.java failure

Handled premultiplied source textures