src/java.desktop/macosx/native/libawt_lwawt/awt/common.h
@@ -102,6 +102,7 @@ struct TxtFrameUniforms {
     vector_float4 color;
     int mode; // NOTE: consider to use bit fields
     int isSrcOpaque;
+    int isSrcPremult;
     int isDstOpaque;
     float extraAlpha;
 };
